--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </main>
     <footer>
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://github.com/Kemsy-art" target="_blank">Kemal Rizvanovic</a>.
     </footer>
 </body>
 </html>
