--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
   <body>
     <main>
       <div class="sedans">
-          <img src="./images/icon-sedans.svg" alt="sedans-icon">
+          <img src="./images/icon-sedans.svg" alt="" aria-hidden="true">
           <h2>SEDANS</h2>
           <p>Choose a sedan for its affordability and excellent <br> fuel economy. Ideal for <br> cruising in the city 
             or on <br> your next road trip.</p>
           <button>Learn More</button>
       </div>
         <div class="suvs">
-            <img src="./images/icon-suvs.svg" alt="suvs-icon"> 
+            <img src="./images/icon-suvs.svg" alt="" aria-hidden="true"> 
             <h2>SUVs</h2>
             <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
               and off-road adventures.</p>
             <button>Learn More</button>
         </div>
       <div class="luxury">
-          <img src="./images/icon-luxury.svg" alt="luxury-icon">
+          <img src="./images/icon-luxury.svg" alt="" aria-hidden="true">
           <h2>LUXURY</h2>
           <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
             rental and arrive in style.</p>
